--- a/archives.html
+++ b/archives.html
@@ -15,8 +15,10 @@
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h2>Pages</h2>
-        <li><a href="/pages/the-first-article.html">the first article</a></li>
+<h1>Archives for pessoal-blog</h1>
+
+<dl>
+</dl>
 </section>
         <section id="extras" class="body">
                 <div class="blogroll">
