--- a/categories.html
+++ b/categories.html
@@ -2,7 +2,7 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>pessoal-blog</title>
+        <title>pessoal-blog - Categories</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pessoal-blog Atom Feed" />
 </head>
@@ -14,10 +14,9 @@
                     <li><a href="/pages/the-first-article.html">the first article</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
-<section id="content" class="body">
-<h2>Pages</h2>
-        <li><a href="/pages/the-first-article.html">the first article</a></li>
-</section>
+    <h1>Categories on pessoal-blog</h1>
+    <ul>
+    </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
