--- a/output/index.html
+++ b/output/index.html
@@ -34,7 +34,7 @@
                             <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="#">Another social s;dlfkas;ldkf;sdflink</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
