Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -2,7 +2,7 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>pessoal-blog - Categories</title>
+        <title>pessoal-blog - Authors</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pessoal-blog Atom Feed" />
 </head>
@@ -14,9 +14,13 @@
                     <li><a href="/pages/the-first-article.html">the first article</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
-    <h1>Categories on pessoal-blog</h1>
+
+<section id="content" class="body">
+    <h1>Authors on pessoal-blog</h1>
     <ul>
     </ul>
+</section>
+
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>links</h2>
@@ -33,7 +37,8 @@
                             <li><a href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="#">Linkedin</a></li>
+                            <li><a href="#">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
