Generate Pelican site

--- a/pages/the-first-article.html
+++ b/pages/the-first-article.html
@@ -12,6 +12,7 @@
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
                     <li class="active"><a href="/pages/the-first-article.html">the first article</a></li>
+                    <li><a href="/pages/segunda-noticia.html">Segunda noticia</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
