--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
                     <li><a href="/pages/the-first-article.html">the first article</a></li>
+                    <li><a href="/pages/segunda-noticia.html">Segunda noticia</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h2>Pages</h2>
         <li><a href="/pages/the-first-article.html">the first article</a></li>
+        <li><a href="/pages/segunda-noticia.html">Segunda noticia</a></li>
 </section>
         <section id="extras" class="body">
                 <div class="blogroll">
