--- a/archives.html
+++ b/archives.html
@@ -12,13 +12,15 @@
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
                     <li><a href="/pages/the-first-article.html">the first article</a></li>
-                    <li><a href="/pages/segunda-noticia.html">Segunda noticia</a></li>
+                    <li><a href="/category/blog.html">blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for pessoal-blog</h1>
 
 <dl>
+    <dt>Sat 13 July 2019</dt>
+    <dd><a href="/segunda-noticia.html">Segunda noticia</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
