--- a/categories.html
+++ b/categories.html
@@ -12,11 +12,12 @@
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
                     <li><a href="/pages/the-first-article.html">the first article</a></li>
-                    <li><a href="/pages/segunda-noticia.html">Segunda noticia</a></li>
+                    <li><a href="/category/blog.html">blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on pessoal-blog</h1>
     <ul>
+        <li><a href="/category/blog.html">blog</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
