--- a/tags.html
+++ b/tags.html
@@ -12,7 +12,7 @@
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
                     <li><a href="/pages/the-first-article.html">the first article</a></li>
-                    <li><a href="/pages/segunda-noticia.html">Segunda noticia</a></li>
+                    <li><a href="/category/blog.html">blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
