Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -11,15 +11,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/the-first-article.html">the first article</a></li>
                     <li><a href="/category/blog.html">blog</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on pessoal-blog</h1>
     <ul>
-        <li><a href="/author/pixies.html">pixies</a> (1)</li>
+        <li><a href="/author/pixies.html">pixies</a> (2)</li>
     </ul>
 </section>
 
