--- a/archives.html
+++ b/archives.html
@@ -11,8 +11,8 @@
         <header id="banner" class="body">
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/the-first-article.html">the first article</a></li>
                     <li><a href="/category/blog.html">blog</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -21,6 +21,8 @@
 <dl>
     <dt>Sat 13 July 2019</dt>
     <dd><a href="/segunda-noticia.html">Segunda noticia</a></dd>
+    <dt>Sat 13 July 2019</dt>
+    <dd><a href="/sobre-esta-pagina.html">Sobre esta página</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
