--- a/segunda-noticia.html
+++ b/segunda-noticia.html
@@ -11,8 +11,8 @@
         <header id="banner" class="body">
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
-                    <li><a href="/pages/the-first-article.html">the first article</a></li>
                     <li class="active"><a href="/category/blog.html">blog</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
