Generate Pelican site

--- a/sobre-esta-pagina.html
+++ b/sobre-esta-pagina.html
@@ -11,8 +11,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
-                    <li><a href="/category/blog.html">blog</a></li>
-                    <li class="active"><a href="/category/misc.html">misc</a></li>
+                    <li class="active"><a href="/category/blog.html">blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -32,9 +31,9 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/pixies.html">pixies</a>
         </address>
-<p>In <a href="/category/misc.html">misc</a>.</p>
-
-</footer><!-- /.post-info -->      <p>i see you</p>
+<p>In <a href="/category/blog.html">blog</a>.</p>
+<p>tags: <a href="/tag/blog.html">blog</a> </p>
+</footer><!-- /.post-info -->      <p>:content:i see you</p>
 
     </div><!-- /.entry-content -->
 
