--- a/tags.html
+++ b/tags.html
@@ -12,13 +12,13 @@
                 <h1><a href="/">pessoal-blog </a></h1>
                 <nav><ul>
                     <li><a href="/category/blog.html">blog</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for pessoal-blog</h1>
     <ul>
+        <li><a href="/tag/blog.html">blog</a> (1)</li>
     </ul>
 </section>
 
