Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -2,23 +2,24 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>pessoal-blog - Authors</title>
+        <title>pixies @ website - Authors</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pessoal-blog Atom Feed" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pixies @ website Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">pessoal-blog </a></h1>
+                <h1><a href="/">pixies @ website </a></h1>
                 <nav><ul>
-                    <li><a href="/category/blog.html">blog</a></li>
+                    <li><a href="/pages/sobre-esta-pagina.html">Sobre</a></li>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on pessoal-blog</h1>
+    <h1>Authors on pixies @ website</h1>
     <ul>
-        <li><a href="/author/pixies.html">pixies</a> (2)</li>
+        <li><a href="/author/pixies.html">pixies</a> (3)</li>
     </ul>
 </section>
 
