--- a/tags.html
+++ b/tags.html
@@ -2,23 +2,26 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>pessoal-blog - Tags</title>
+        <title>pixies @ website - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pessoal-blog Atom Feed" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pixies @ website Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">pessoal-blog </a></h1>
+                <h1><a href="/">pixies @ website </a></h1>
                 <nav><ul>
-                    <li><a href="/category/blog.html">blog</a></li>
+                    <li><a href="/pages/sobre-esta-pagina.html">Sobre</a></li>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for pessoal-blog</h1>
+    <h1>Tags for pixies @ website</h1>
     <ul>
-        <li><a href="/tag/blog.html">blog</a> (1)</li>
+        <li><a href="/tag/install.html">install</a> (1)</li>
+        <li><a href="/tag/pelican.html">pelican</a> (3)</li>
+        <li><a href="/tag/python.html">python</a> (3)</li>
     </ul>
 </section>
 
