--- a/categories.html
+++ b/categories.html
@@ -2,21 +2,22 @@
 <html lang="english">
 <head>
         <meta charset="utf-8" />
-        <title>pessoal-blog - Categories</title>
+        <title>pixies @ website - Categories</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pessoal-blog Atom Feed" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="pixies @ website Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">pessoal-blog </a></h1>
+                <h1><a href="/">pixies @ website </a></h1>
                 <nav><ul>
-                    <li><a href="/category/blog.html">blog</a></li>
+                    <li><a href="/pages/sobre-esta-pagina.html">Sobre</a></li>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
-    <h1>Categories on pessoal-blog</h1>
+    <h1>Categories on pixies @ website</h1>
     <ul>
-        <li><a href="/category/blog.html">blog</a> (2)</li>
+        <li><a href="/category/blog.html">Blog</a> (3)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
