Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -19,12 +19,8 @@
 <h1>Archives for pixies @ website</h1>
 
 <dl>
-    <dt>sáb 13 julho 2019</dt>
-    <dd><a href="/mais-uma-publicacao-utilizando-pelican.html">Mais uma publicacao utilizando Pelican</a></dd>
-    <dt>sáb 13 julho 2019</dt>
-    <dd><a href="/instalando-e-configurando-pelican.html">Instalando e configurando Pelican</a></dd>
-    <dt>sáb 13 julho 2019</dt>
-    <dd><a href="/meu-website-com-pelican.html">Meu website com Pelican</a></dd>
+    <dt>Sat 13 July 2019</dt>
+    <dd><a href="/um-site-pessoal-com-pelican.html">Um site pessoal com Pelican</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
