--- a/tags.html
+++ b/tags.html
@@ -19,9 +19,9 @@
 <section id="content" class="body">
     <h1>Tags for pixies @ website</h1>
     <ul>
-        <li><a href="/tag/install.html">install</a> (1)</li>
-        <li><a href="/tag/pelican.html">pelican</a> (3)</li>
-        <li><a href="/tag/python.html">python</a> (3)</li>
+        <li><a href="/tag/blog.html">blog</a> (1)</li>
+        <li><a href="/tag/pelican.html">pelican</a> (1)</li>
+        <li><a href="/tag/python.html">python</a> (1)</li>
     </ul>
 </section>
 
