Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -19,6 +19,8 @@
 <h1>Archives for pixies @ website</h1>
 
 <dl>
+    <dt>Sun 14 July 2019</dt>
+    <dd><a href="/como-utilizar-acentuacao-em-teclado-americano-do-macbook-pro-no-archlinux.html">Como utilizar acentuação em teclado americano do Macbook pro no ArchLinux</a></dd>
     <dt>Sat 13 July 2019</dt>
     <dd><a href="/um-site-pessoal-com-pelican.html">Um site pessoal com Pelican</a></dd>
 </dl>
