Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -36,6 +36,7 @@
 
                             <li><a href="https://www.linkedin.com/in/cleyton-f%C3%A1bio-a96b2741/">Linkedin</a></li>
                             <li><a href="https://twitter.com/cleytonfabio">Twitter</a></li>
+                            <li><a href="https://github.com/pixies">Github</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
